--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,6 @@ docker:
     # run lint!
     - run:
     name: run lint
-    command: |
-    . venv/bin/activate
-    make lint 
+    command:
+    - . venv/bin/activate;
+      make lint 
